--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,10 @@ img.imagen_entrenamiento {
     grid-area: contenido;
 }
 
+@media only screen and (max-width: 600px) {
+
+    body {
+        background-color: lightgreen;
+    }
+
+}
