--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,230 @@
 body {
-    background-color: lightgoldenrodyellow;
+    background-color: rgb(237, 237, 208);
 }
 
-p.texto_entrenamientos { font-size: 19px;border: 4px solid black;
+.titulo {
+  font-size: 36px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 80px;
+  color: #333;
+  border-bottom: 2px solid #333;
+  padding-bottom: 10px;
+}
+
+.carousel-container {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.carousel-slide {
+  display: flex;
+  animation: carouselAnimation 15s cubic-bezier(0.4, 0, 0.2, 1) infinite; 
+  white-space: nowrap; 
+}
+
+@keyframes carouselAnimation {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+
+p.texto_entrenamientos { font-size: 19px;border: 4px 
 
 }
+
+h2 {
+  color: #0e0d0d;
+  font-size: 35px;
+  margin-bottom: 15px;
+  margin-top: 120px;
+}
+
+h3 {
+  color: #050505;
+  font-size: 20px;
+  margin-bottom: 5px;
+  margin-top: 50px;
+}
+
+p {
+  color: #040404;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 10px;
+}
+
+
+.menu ul li a:hover {
+  background-color: blue;
+}
+
+
+
+
+
+
+.imagenes {
+  display: flex;
+  justify-content: space-between;
+}
+
+.imagenes img {
+  width: 300px;
+  height: auto;
+  margin: 0;
+}
+
 
 img.imagen_entrenamiento {
+  display: inline-block;
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+.grid-layout {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  
+  .menu {
+    display: none;
+    position: fixed;
+  }
+  
+  #headercompu {
+    display: flex;
+    justify-content: space-evenly;
+    background: #070707;
+    height: 50px;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+  
+  nav {
+    background: #070707;
+    height: 80px;
+    width: 100%;
+  }
+  
+  .enlace {
+    position: absolute;
+    padding: 20px 50px;
+  }
+  
+  nav ul {
+    float: right;
+    margin-right: 20px;
+  }
+  
+  nav ul li {
     display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+  }
+  
+  .a_header {
+    color: #fff;
+    font-size: 18px;
+    border-radius: 3px;
+    text-transform: uppercase;
+    padding: 5px;
+  }
+  
+  .a_header:hover {
+    background: #000090;
+    transition: 0.5s;
+  }
+  
+  li a.active,
+  li a:hover {
+    background: #000090;
+    transition: 0.5s;
+  }
+  
+  .checkbtn {
+    font-size: 30px;
+    color: #fff;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+  }
+  
+  #check {
+    display: none;
+  }
+  
+  section {
+    background: url(fondo.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: calc(100vh - 80px);
+  }
+  
+
+@media (max-width: 952px){
+    .enlace{
+        padding-left: 20px;
+    }
+    nav ul li a{
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 858px){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    li a:hover, li a.active{
+        background: none;
+        color: red;
+    }
+    #check:checked ~ ul{
+        left:0;
+    }
 }
 
 .grid.layout{
@@ -23,6 +240,7 @@ img.imagen_entrenamiento {
 
 .menu{
     grid-area: menu ;
+    position: fixed;
 }
 
 .imagenes{
@@ -39,4 +257,52 @@ img.imagen_entrenamiento {
         background-color: lightgreen;
     }
 
+}
+
+
+.calculator {
+  max-width: 400px;
+  margin: 0 auto; 
+}
+
+.input-group {
+  margin-bottom: 10px;
+}
+
+.input-group label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.input-group input,
+.input-group select {
+  width: 100%;
+  padding: 5px;
+  border: 1px solid #ccc;
+}
+
+button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+
+#resultado {
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  text-align: left;
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  flex: 1; 
+  margin-left: 10px; 
 }
